# ska-mid-integration

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .release  LICENSE  Makefile  README.md  pyproject.toml
Dashboards/: OMCPT-LOW.wj  OMCPT-MID.wj
charts/ska-mid-integration/: Chart.yaml  values.yaml
charts/ska-mid-integration/templates/: _helpers.tpl  chartinfo.yaml  dashboards.yaml  kafka.yaml  sdp_qa_secrets.yaml
charts/ska-mid-integration/tmc_pairwise/: dish-lmc-values.yaml  tmc_csp_values.yaml  tmc_dish_values.yaml  tmc_sdp_values.yaml
docs/src/: conf.py  index.rst  telescope_api.rst
docs/src/apis/: operational_mandc.rst
docs/src/deployment_details/: index.rst  tmc_low.rst
docs/src/developer_guide/: code_quality.rst
docs/src/getting_started/: getting_started.rst
docs/src/reovering_telescope/: recovery.rst
src/ska_mid_integration/: _init_.py  setpath.py
src/ska_mid_integration/helpers/: env.py  qa_metrics.py
tests/: conftest.py  pytest.ini  test_sample.py
